corrected icon route and adjusted dimensions to fit button overflow on menu cards

--- a/style/style.css
+++ b/style/style.css
@@ -63,8 +63,8 @@ footer{
 	border-style: dotted;
 	border-width: 2px;
 	border-color: grey;
-	width: 200px;
-	height: 200px;
+	width: 2500px;
+	height: 250px;
 	margin:  10px;
 }
 .menuRow{
